--- a/index.html
+++ b/index.html
@@ -25,14 +25,24 @@
       Berners-Lee</a>. It's not true that Sir Tim invented HTML in order to
       share pictures of his cat, but it would be cool if it were.
     </p>
-
-        <img src="images/kitten.jpg" alt="An Adorable kitten">
+        <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329" target="_blank" rel="noopener">
+        <img src="images/kitten.jpg" alt="An Adorable kitten"></a>
 
     <h2>Background</h2>
 
     <p>
       Learn Enough To Be Dangerous is an outgrowth of the <a href="https://railstutorial.org/">Ruby on Rails Tutorial</a>and the <a href="https://www.softcover.io/"> Softcover publishing platform</a>. This page is part of the sample site for the <a href="https://www.learnenough.com/html"><em>Learn Enough HTML to be dangerous<a></em>, which teaches the basics of <strong>H</strong>yper <strong> T</strong>ext<strong> M</strong>arkup<strong> L</strong>anguage
     </p>
+
+    <p>
+       <a href="https://twitter.com/learnenough" target="_blank"
+       rel="noopener" style="text-decoration: none;">
+         <img src="images/small_twitter_logo.png">
+       </a>
+       You should follow Learn Enough on Twitter
+       <a href="https://twitter.com/learnenough"
+          target="_blank" rel="noopener">here</a>.
+     </p>
 
     <h2>Founders</h2>
 
