--- a/tags.html
+++ b/tags.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Tags</title>
@@ -8,7 +8,9 @@
 
     <h1>Important HTML tags</h1>
 
+        <a href="https://www.flickr.com/photos/jdhancock/3814523970" rel="_blank" target="noopener">
         <img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper">
+        <a/>
 
         <p>
           This page is designed as a quick reference for some of the common tags
