add a Moby Dick Page and nnav menu

--- a/moby_dick.html
+++ b/moby_dick.html
@@ -5,6 +5,12 @@
     <title>Moby Dick</title>
   </head>
 
+  <div>
+     <a href="index.html">Home</a>
+     <a href="moby_dick.html">Moby Dick</a>
+     <a href="tags.html">HTML Tags</a>
+   </div>
+
   <body>
     <!-- much here to be styled, will do so in last section -->
  <header>
@@ -64,7 +70,7 @@
    </p>
  </div>
 
- <div> 
+ <div>
  <h4>My top 3 favorite things about Moby Dick</h4>
 
       <ol>
