--- a/tags.html
+++ b/tags.html
@@ -6,6 +6,12 @@
   </head>
   <body>
 
+    <div>
+       <a href="index.html">Home</a>
+       <a href="moby_dick.html">Moby Dick</a>
+       <a href="tags.html">HTML Tags</a>
+     </div>
+
     <header>
     <h1>Important HTML tags</h1>
 
@@ -157,7 +163,9 @@
           <td>li</td>
           <td>format as list element</td>
           <td>
-              &lt;<li>this is a list element</li>&gt;
+            <code>
+                &lt;<li>&gt;this is a list element&lt;</li>&gt;
+            </code>
           </td>
           <td><li>This is a list element</li></td>
         </tr>
