--- a/tags.html
+++ b/tags.html
@@ -8,8 +8,8 @@
 
     <div>
        <a href="index.html">Home</a>
-       <a href="moby_dick.html">Moby Dick</a>
        <a href="tags.html">HTML Tags</a>
+       <a href="moby_dick.html">Moby Dick</a>
      </div>
 
     <header>
@@ -51,49 +51,49 @@
             <th>Purpose</th>
           </tr>
           <tr>
-          <td><code>h1</code>&ndash;<code>h6</code></td>
-          <td>headings</td>
-          <td>include a heading (levels 1&ndash;6)</td>
+          <td style="padding: 20px";><code>h1</code>&ndash;<code>h6</code></td>
+          <td style="padding: 20px";>headings</td>
+          <td style="padding: 20px";>include a heading (levels 1&ndash;6)</td>
      </tr>
      <tr>
-        <td><code>p</code></td>
-        <td>paragraph</td>
-        <td>include a paragraph of text</td>
+        <td style="padding:10px";><code>p</code></td>
+        <td style="padding:10px";>paragraph</td>
+        <td style="padding:10px;">include a paragraph of text</td>
       </tr>
       <tr>
-        <td><code>table</code></td>
-        <td>table</td>
-        <td>include a table</td>
+        <td style="padding: 20px";><code>table</code></td>
+        <td style="padding: 20px";>table</td>
+        <td style="padding: 20px";>include a table</td>
       </tr>
       <tr>
-        <td><code>tr</code></td>
-        <td>table row</td>
-        <td>include a row of data</td>
+        <td style="padding: 20px";><code>tr</code></td>
+        <td style="padding: 20px";>table row</td>
+        <td style="padding: 20px";>include a row of data</td>
       </tr>
       <tr>
-        <td><code>th</code></td>
-        <td>table header</td>
-        <td>make a table header</td>
+        <td style="padding: 20px";><code>th</code></td>
+        <td style="padding: 20px";>table header</td>
+        <td style="padding: 20px";>make a table header</td>
       </tr>
       <tr>
-        <td><code>td</code></td>
-        <td>table data</td>
-        <td>include a table data cell</td>
+        <td style="padding: 20px";><code>td</code></td>
+        <td style="padding: 20px";>table data</td>
+        <td style="padding: 20px";>include a table data cell</td>
       </tr>
       <tr>
-        <td><code>blockquote</code></td>
-        <td>quote</td>
-        <td>format a quote in a block</td>
+        <td style="padding: 20px";><code>blockquote</code></td>
+        <td style="padding: 20px";>quote</td>
+        <td style="padding: 20px";>format a quote in a block</td>
       </tr>
       <tr>
-        <td><code>ol</code></td>
-        <td>ordered list</td>
-        <td>format a list with numbers</td>
+        <td style="padding: 20px";><code>ol</code></td>
+        <td style="padding: 20px";>ordered list</td>
+        <td style="padding: 20px";>format a list with numbers</td>
       </tr>
       <tr>
-        <td><code>ul</code></td>
-        <td>unordered list</td>
-        <td>format a list with bullet points</td>
+        <td style="padding: 20px";><code>ul</code></td>
+        <td style="padding: 20px";>unordered list</td>
+        <td style="padding: 20px";>format a list with bullet points</td>
       </tr>
         </table>
       </div>
@@ -110,64 +110,64 @@
                <th>Result</th>
              </tr>
              <tr>
-               <td><code>em</code></td>
-               <td>emphasized</td>
-               <td>make emphasized text</td>
-               <td><code>&lt;em&gt;technical sophistication&lt;/em&gt;</code></td>
-               <td><em>technical sophistication</em></td>
+               <td style="padding: 20px";><code>em</code></td>
+               <td style="padding: 20px";>emphasized</td>
+               <td style="padding: 20px";>make emphasized text</td>
+               <td style="padding: 20px";><code>&lt;em&gt;technical sophistication&lt;/em&gt;</code></td>
+               <td style="padding: 20px";><em>technical sophistication</em></td>
              </tr>
              <tr>
-          <td><code>strong</code></td>
-          <td>strong</td>
-          <td>make strong text</td>
-          <td>
+          <td style="padding: 20px";><code>strong</code></td>
+          <td style="padding: 20px";>strong</td>
+          <td style="padding: 20px";>make strong text</td>
+          <td style="padding: 20px";>
             <code>&lt;strong&gt;at least a billion people&lt;/strong&gt;</code>
           </td>
-          <td><strong>at least a billion people</strong></td>
+          <td style="padding: 20px";><strong>at least a billion people</strong></td>
         </tr>
         <tr>
-          <td><code>a</code></td>
-          <td>anchor</td>
-          <td>make hyperlink</td>
-          <td>
+          <td style="padding: 20px";><code>a</code></td>
+          <td style="padding: 20px";>anchor</td>
+          <td style="padding: 20px";>make hyperlink</td>
+          <td style="padding: 20px";>
             <code>
               &lt;a href="https://learnenough.com/"&gt;Learn Enough&lt;/a&gt;
             </code>
           </td>
-          <td><a href="https://learnenough.com/">Learn Enough</a></td>
+          <td style="padding: 20px";><a href="https://learnenough.com/">Learn Enough</a></td>
         </tr>
         <tr>
-          <td><code>img</code></td>
-          <td>image</td>
-          <td>include an image</td>
-          <td>
+          <td style="padding: 20px";><code>img</code></td>
+          <td style="padding: 20px";>image</td>
+          <td style="padding: 20px";>include an image</td>
+          <td style="padding: 20px";>
             <code>
               &lt;img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"&gt;
             </code>
           </td>
-          <td><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
+          <td style="padding: 20px";><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
         </tr>
         <tr>
-          <td><code>code</code></td>
-          <td>code</td>
-          <td>format in typewriter font</td>
-          <td>
+          <td style="padding: 20px";><code>code</code></td>
+          <td style="padding: 20px";>code</td>
+          <td style="padding: 20px";>format in typewriter font</td>
+          <td style="padding: 20px";>
             <code>
               &lt; <code>this is code</code> &gt;
             </code>
           </td>
-          <td><code>This is code</code></td>
+          <td style="padding: 20px";><code>This is code</code></td>
         </tr>
         <tr>
-          <td><code>li</code></td>
-          <td>li</td>
-          <td>format as list element</td>
-          <td>
+          <td style="padding: 20px";><code>li</code></td>
+          <td style="padding: 20px";>li</td>
+          <td style="padding: 20px";>format as list element</td>
+          <td style="padding: 20px";>
             <code>
                 &lt;<li>&gt;this is a list element&lt;</li>&gt;
             </code>
           </td>
-          <td><li>This is a list element</li></td>
+          <td style="padding: 20px";><li>This is a list element</li></td>
         </tr>
       </table>
     </div>
