Refactor inline styles innto a stylesheet

--- a/tags.html
+++ b/tags.html
@@ -6,11 +6,12 @@
   </head>
   <body>
 
-    <div>
-       <a href="index.html">Home</a>
-       <a href="tags.html">HTML Tags</a>
-       <a href="moby_dick.html">Moby Dick</a>
+    <div style="text-align: right;">
+       <a href="index.html" style="text-decoration-line: none; color: blue;">Home</a>
+       <a href="tags.html" style="margin-left: 10px; text-decoration-line: none; color: blue;">HTML Tags</a>
+       <a href="moby_dick.html" style="margin-left: 10px; text-decoration-line: none; color: blue;">Moby Dick</a>
      </div>
+
 
     <header>
     <h1>Important HTML tags</h1>
@@ -170,6 +171,42 @@
           <td style="padding: 20px";><li>This is a list element</li></td>
         </tr>
       </table>
+
+      <div>
+        <h2>Document tags</h2>
+
+          <table>
+            <tr>
+              <th>Tag</th>
+              <th>Name</th>
+              <th>Purpose</th>
+            </tr>
+            <tr>
+            <td style="padding: 20px";><code>html</code>
+            <td style="padding: 20px";>html header</td>
+            <td style="padding: 20px";>includes a doctype</td>
+       </tr>
+       <tr>
+          <td style="padding:10px";><code>head</code></td>
+          <td style="padding:10px";>paragraph</td>
+          <td style="padding:10px;">include a paragraph of text</td>
+        </tr>
+        <tr>
+          <td style="padding: 20px";><code>body</code></td>
+          <td style="padding: 20px";>body</td>
+          <td style="padding: 20px";>this is the body of the document</td>
+        </tr>
+        <tr>
+          <td style="padding: 20px";><code>title</code></td>
+          <td style="padding: 20px";>title tag</td>
+          <td style="padding: 20px";>adds a sentenxce to the tab</td>
+        </tr>
+        <tr>
+          <td style="padding: 20px";><code>meta</code></td>
+          <td style="padding: 20px";>meta tags</td>
+          <td style="padding: 20px";>for search relevance</td>
+        </tr>
+      </div>
     </div>
 
       </body>
