--- a/moby_dick.html
+++ b/moby_dick.html
@@ -5,15 +5,16 @@
     <title>Moby Dick</title>
   </head>
 
-  <div>
-     <a href="index.html">Home</a>
-     <a href="tags.html">HTML Tags</a>
-     <a href="moby_dick.html">Moby Dick</a>
+  <div style="text-align: right;">
+     <a href="index.html" style="text-decoration-line: none; color: blue;">Home</a>
+     <a href="tags.html" style="margin-left: 10px; text-decoration-line: none; color: blue;">HTML Tags</a>
+     <a href="moby_dick.html" style="margin-left: 10px; text-decoration-line: none; color: blue;">Moby Dick</a>
    </div>
+
 
   <body>
     <!-- much here to be styled, will do so in last section -->
- <header>
+ <header style="text-align: center; margin: 0 0 80px;">
    <h1 style="text-align: center;">A Softcover Book Report</h1>
    <h2 style="text-align: center;">Moby-Dick (or, The Whale)</h2>
  </header>
@@ -33,16 +34,17 @@
  </div>
 
  <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
-   <img src="images/sperm_whales.jpg" alt="Sperm whale">
+   <img src="images/sperm_whales.jpg" alt="Sperm whale" style="display: block; margin: 0 auto;">
  </a>
 
- <div>
+ <div style="width: 500px; margin: 20px auto; padding: 30px;
+    background-color: #fafafa;">
 
    <h3>Moby-Dick: A classic tale of the sea</h3>
 
    <a href="https://www.softcover.io/read/6070fb03/moby-dick"
       target="_blank" rel="noopener">
-     <img src="images/moby_dick.png" alt="Moby Dick" height="200px" style= "float: left; margin-right: 40px;">
+     <img src="images/moby_dick.png" alt="Moby Dick" height="200px" style="float-left: block; margin: 20px auto;">
    </a>
 
    <p>
