commit final changes

--- a/tags.html
+++ b/tags.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Tags</title>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
-    <div style="text-align: right;">
-       <a href="index.html" style="text-decoration-line: none; color: blue;">Home</a>
-       <a href="tags.html" style="margin-left: 10px; text-decoration-line: none; color: blue;">HTML Tags</a>
-       <a href="moby_dick.html" style="margin-left: 10px; text-decoration-line: none; color: blue;">Moby Dick</a>
+    <div id="main-nav" class="nav-menu">
+       <a href="index.html" class="image-link">Home</a>
+       <a href="tags.html" class="nav-spacing image-link">HTML Tags</a>
+       <a href="moby_dick.html" class="nav-spacing image-link" class="image-link">Moby Dick</a>
      </div>
 
 
@@ -52,49 +53,49 @@
             <th>Purpose</th>
           </tr>
           <tr>
-          <td style="padding: 20px";><code>h1</code>&ndash;<code>h6</code></td>
-          <td style="padding: 20px";>headings</td>
-          <td style="padding: 20px";>include a heading (levels 1&ndash;6)</td>
+          <td class="table-row";><code>h1</code>&ndash;<code>h6</code></td>
+          <td class="table-row";>headings</td>
+          <td class="table-row";>include a heading (levels 1&ndash;6)</td>
      </tr>
      <tr>
-        <td style="padding:10px";><code>p</code></td>
-        <td style="padding:10px";>paragraph</td>
-        <td style="padding:10px;">include a paragraph of text</td>
+        <td class="table-row";><code>p</code></td>
+        <td class="table-row";>paragraph</td>
+        <td style="table-row">include a paragraph of text</td>
       </tr>
       <tr>
-        <td style="padding: 20px";><code>table</code></td>
-        <td style="padding: 20px";>table</td>
-        <td style="padding: 20px";>include a table</td>
+        <td class="table-row";><code>table</code></td>
+        <td class="table-row";>table</td>
+        <td class="table-row";>include a table</td>
       </tr>
       <tr>
-        <td style="padding: 20px";><code>tr</code></td>
-        <td style="padding: 20px";>table row</td>
-        <td style="padding: 20px";>include a row of data</td>
+        <td class="table-row";><code>tr</code></td>
+        <td class="table-row";>table row</td>
+        <td class="table-row";>include a row of data</td>
       </tr>
       <tr>
-        <td style="padding: 20px";><code>th</code></td>
-        <td style="padding: 20px";>table header</td>
-        <td style="padding: 20px";>make a table header</td>
+        <td class="table-row";><code>th</code></td>
+        <td class="table-row";>table header</td>
+        <td class="table-row";>make a table header</td>
       </tr>
       <tr>
-        <td style="padding: 20px";><code>td</code></td>
-        <td style="padding: 20px";>table data</td>
-        <td style="padding: 20px";>include a table data cell</td>
+        <td class="table-row";><code>td</code></td>
+        <td class="table-row";>table data</td>
+        <td class="table-row";>include a table data cell</td>
       </tr>
       <tr>
-        <td style="padding: 20px";><code>blockquote</code></td>
-        <td style="padding: 20px";>quote</td>
-        <td style="padding: 20px";>format a quote in a block</td>
+        <td class="table-row";><code>blockquote</code></td>
+        <td class="table-row";>quote</td>
+        <td class="table-row";>format a quote in a block</td>
       </tr>
       <tr>
-        <td style="padding: 20px";><code>ol</code></td>
-        <td style="padding: 20px";>ordered list</td>
-        <td style="padding: 20px";>format a list with numbers</td>
+        <td class="table-row";><code>ol</code></td>
+        <td class="table-row";>ordered list</td>
+        <td class="table-row";>format a list with numbers</td>
       </tr>
       <tr>
-        <td style="padding: 20px";><code>ul</code></td>
-        <td style="padding: 20px";>unordered list</td>
-        <td style="padding: 20px";>format a list with bullet points</td>
+        <td class="table-row";><code>ul</code></td>
+        <td class="table-row";>unordered list</td>
+        <td class="table-row";>format a list with bullet points</td>
       </tr>
         </table>
       </div>
@@ -111,64 +112,64 @@
                <th>Result</th>
              </tr>
              <tr>
-               <td style="padding: 20px";><code>em</code></td>
-               <td style="padding: 20px";>emphasized</td>
-               <td style="padding: 20px";>make emphasized text</td>
-               <td style="padding: 20px";><code>&lt;em&gt;technical sophistication&lt;/em&gt;</code></td>
-               <td style="padding: 20px";><em>technical sophistication</em></td>
+               <td class="table-row";><code>em</code></td>
+               <td class="table-row";>emphasized</td>
+               <td class="table-row";>make emphasized text</td>
+               <td class="table-row";><code>&lt;em&gt;technical sophistication&lt;/em&gt;</code></td>
+               <td class="table-row";><em>technical sophistication</em></td>
              </tr>
              <tr>
-          <td style="padding: 20px";><code>strong</code></td>
-          <td style="padding: 20px";>strong</td>
-          <td style="padding: 20px";>make strong text</td>
-          <td style="padding: 20px";>
+          <td class="table-row";><code>strong</code></td>
+          <td class="table-row";>strong</td>
+          <td class="table-row";>make strong text</td>
+          <td class="table-row";>
             <code>&lt;strong&gt;at least a billion people&lt;/strong&gt;</code>
           </td>
-          <td style="padding: 20px";><strong>at least a billion people</strong></td>
+          <td class="table-row";><strong>at least a billion people</strong></td>
         </tr>
         <tr>
-          <td style="padding: 20px";><code>a</code></td>
-          <td style="padding: 20px";>anchor</td>
-          <td style="padding: 20px";>make hyperlink</td>
-          <td style="padding: 20px";>
+          <td class="table-row";><code>a</code></td>
+          <td class="table-row";>anchor</td>
+          <td class="table-row";>make hyperlink</td>
+          <td class="table-row";>
             <code>
               &lt;a href="https://learnenough.com/"&gt;Learn Enough&lt;/a&gt;
             </code>
           </td>
-          <td style="padding: 20px";><a href="https://learnenough.com/">Learn Enough</a></td>
+          <td class="table-row";><a href="https://learnenough.com/">Learn Enough</a></td>
         </tr>
         <tr>
-          <td style="padding: 20px";><code>img</code></td>
-          <td style="padding: 20px";>image</td>
-          <td style="padding: 20px";>include an image</td>
-          <td style="padding: 20px";>
+          <td class="table-row";><code>img</code></td>
+          <td class="table-row";>image</td>
+          <td class="table-row";>include an image</td>
+          <td class="table-row";>
             <code>
               &lt;img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"&gt;
             </code>
           </td>
-          <td style="padding: 20px";><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
+          <td class="table-row";><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
         </tr>
         <tr>
-          <td style="padding: 20px";><code>code</code></td>
-          <td style="padding: 20px";>code</td>
-          <td style="padding: 20px";>format in typewriter font</td>
-          <td style="padding: 20px";>
+          <td class="table-row";><code>code</code></td>
+          <td class="table-row";>code</td>
+          <td class="table-row";>format in typewriter font</td>
+          <td class="table-row";>
             <code>
               &lt; <code>this is code</code> &gt;
             </code>
           </td>
-          <td style="padding: 20px";><code>This is code</code></td>
+          <td class="table-row";><code>This is code</code></td>
         </tr>
         <tr>
-          <td style="padding: 20px";><code>li</code></td>
-          <td style="padding: 20px";>li</td>
-          <td style="padding: 20px";>format as list element</td>
-          <td style="padding: 20px";>
+          <td class="table-row";><code>li</code></td>
+          <td class="table-row";>li</td>
+          <td class="table-row";>format as list element</td>
+          <td class="table-row";>
             <code>
                 &lt;<li>&gt;this is a list element&lt;</li>&gt;
             </code>
           </td>
-          <td style="padding: 20px";><li>This is a list element</li></td>
+          <td class="table-row";><li>This is a list element</li></td>
         </tr>
       </table>
 
@@ -182,9 +183,9 @@
               <th>Purpose</th>
             </tr>
             <tr>
-            <td style="padding: 20px";><code>html</code>
-            <td style="padding: 20px";>html header</td>
-            <td style="padding: 20px";>includes a doctype</td>
+            <td class="table-row";><code>html</code>
+            <td class="table-row";>html header</td>
+            <td class="table-row";>includes a doctype</td>
        </tr>
        <tr>
           <td style="padding:10px";><code>head</code></td>
@@ -192,19 +193,19 @@
           <td style="padding:10px;">include a paragraph of text</td>
         </tr>
         <tr>
-          <td style="padding: 20px";><code>body</code></td>
-          <td style="padding: 20px";>body</td>
-          <td style="padding: 20px";>this is the body of the document</td>
+          <td class="table-row";><code>body</code></td>
+          <td class="table-row";>body</td>
+          <td class="table-row";>this is the body of the document</td>
         </tr>
         <tr>
-          <td style="padding: 20px";><code>title</code></td>
-          <td style="padding: 20px";>title tag</td>
-          <td style="padding: 20px";>adds a sentenxce to the tab</td>
+          <td class="table-row";><code>title</code></td>
+          <td class="table-row";>title tag</td>
+          <td class="table-row";>adds a sentenxce to the tab</td>
         </tr>
         <tr>
-          <td style="padding: 20px";><code>meta</code></td>
-          <td style="padding: 20px";>meta tags</td>
-          <td style="padding: 20px";>for search relevance</td>
+          <td class="table-row";><code>meta</code></td>
+          <td class="table-row";>meta tags</td>
+          <td class="table-row";>for search relevance</td>
         </tr>
       </div>
     </div>
