--- a/moby_dick.html
+++ b/moby_dick.html
@@ -3,20 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Moby Dick</title>
+    <link rel="stylesheet" href="css/main.css">
   </head>
 
-  <div style="text-align: right;">
-     <a href="index.html" style="text-decoration-line: none; color: blue;">Home</a>
-     <a href="tags.html" style="margin-left: 10px; text-decoration-line: none; color: blue;">HTML Tags</a>
-     <a href="moby_dick.html" style="margin-left: 10px; text-decoration-line: none; color: blue;">Moby Dick</a>
+  <div id="main-nav" class="nav-menu">
+     <a href="index.html" class="image-link">Home</a>
+     <a href="tags.html" class="nav-spacing image-link">HTML Tags</a>
+     <a href="moby_dick.html" class="nav-spacing image-link" class="image-link">Moby Dick</a>
    </div>
 
 
   <body>
     <!-- much here to be styled, will do so in last section -->
- <header style="text-align: center; margin: 0 0 80px;">
-   <h1 style="text-align: center;">A Softcover Book Report</h1>
-   <h2 style="text-align: center;">Moby-Dick (or, The Whale)</h2>
+ <header class="big-header">
+   <h1 class="header-positioning">A Softcover Book Report</h1>
+   <h2 class="header-positioning">Moby-Dick (or, The Whale)</h2>
  </header>
 
  <div>
@@ -37,8 +38,7 @@
    <img src="images/sperm_whales.jpg" alt="Sperm whale" style="display: block; margin: 0 auto;">
  </a>
 
- <div style="width: 500px; margin: 20px auto; padding: 30px;
-    background-color: #fafafa;">
+ <div id="box" class="box-style">
 
    <h3>Moby-Dick: A classic tale of the sea</h3>
 
@@ -54,9 +54,9 @@
        by Herman Melville begins with these immortal words:
    </p>
 
-   <blockquote style="font-style: italic; font-size: 20px;">
+   <blockquote class="quote-style">
      <p>
-       <span style="font-style: normal; font-size: 24px; font-weight: bold; color: #ccc">Call me Ishmael.</span> Some years ago–never mind how long
+       <span class="text-emphasis">Call me Ishmael.</span> Some years ago–never mind how long
        precisely–having little or no money in my purse, and nothing
        particular to interest me on shore, I thought I would sail about a
        little and see the watery part of the world. It is a way I have of
